<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="313dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rice"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apple"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spaghetti"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/butter"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nutella"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/milk"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eggs"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bread"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coca_cola"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wine"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fish"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/potatos"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flour"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strawberries"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salad"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/corn_flakes"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bacon"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brioches"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soy_sauce"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffe"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beer"
                android:textAlignment="center"
                android:onClick="returnItem"/>

            <Button
                android:id="@+id/btn25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ice_cream"
                android:textAlignment="center"
                android:onClick="returnItem"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>